--- a/styles-resume.css
+++ b/styles-resume.css
@@ -1,27 +1,47 @@
-body {
-  align-items: center;
-  display:flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-body > *{
-  display: inline-block;
-}
-h1{
-  align-self: center;
-}
-hr{
-  width:100%
-}
-header{
-  align-items: center;
-  display: inline-flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  text-align: center;
-  width: 100%;
-}
-address{
-  margin: 10px;
-}
+@media print {
+  main {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center; }
+    main > * {
+      display: inline-block;
+      width: 80%; }
+
+  h1 {
+    align-self: center; }
+
+  hr {
+    width: 100%; }
+
+  .header {
+    align-items: center;
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    text-align: center;
+    width: 100%; }
+    .header header {
+      display: flex;
+      flex-direction: column;
+      width: 100%; }
+      .header header address {
+        align-self: flex-start; }
+
+  address {
+    margin: 10px; }
+
+  .screen {
+    display: none; } }
+@media screen {
+  .detail {
+    display: none; }
+
+  :hover > .detail {
+    display: inline-block; }
+
+  .print {
+    display: none; } }
+
+/*# sourceMappingURL=styles-resume.css.map */
