--- a/styles-resume.css
+++ b/styles-resume.css
@@ -8,29 +8,29 @@
     main > * {
       display: inline-block;
       width: 80%; }
+    main address {
+      text-align: center; }
 
-  h1 {
-    align-self: center; }
+  h2 {
+    margin: 10px; }
 
   hr {
     width: 100%; }
 
-  .header {
+  header {
     align-items: center;
     display: inline-flex;
-    flex-direction: row;
-    justify-content: flex-start;
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
     width: 100%; }
-    .header header {
+    header header {
+      font-size: 12px;
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       width: 100%; }
-      .header header address {
-        align-self: flex-start; }
-
-  address {
-    margin: 10px; }
+    header h1 {
+      align-self: center; }
 
   .screen {
     display: none; } }
