--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,19 @@
 /* 6dp elevation modified*/
 /* 12dp elevation modified*/
 /* 16dp elevation */
-/* 24dp elevation */
 html {
   width: 100vw; }
 
 body {
+  overflow-y: hidden;
   overflow-x: hidden;
   font-family: "Roboto", sans-serif;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center; }
+  align-items: center;
+  margin: 0;
+  margin-right: 8px; }
 @font-face {
   body {
     font-family: "Roboto";
@@ -38,7 +40,7 @@ hr {
   width: 100%; }
 
 a {
-  color: blue;
+  color: #0000ff;
   text-decoration: none;
   cursor: pointer; }
 
@@ -46,7 +48,7 @@ a:hover {
   text-decoration: underline; }
 
 a:visited {
-  color: purple; }
+  color: #800080; }
 
 .nav_container {
   height: 100%;
@@ -65,7 +67,7 @@ a:visited {
     display: block; }
   .nav_container .nav_menu {
     box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
-    background-color: white;
+    background-color: #fff;
     display: none;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -81,13 +83,15 @@ a:visited {
     .nav_container .nav_menu ul {
       text-align: center;
       padding: 0; }
-  .nav_container .nav_menu.active, .nav_container .nav_menu.pinned {
+  .nav_container .nav_menu.active,
+  .nav_container .nav_menu.pinned {
     display: flex; }
 
 .header {
   background-color: #1b5e20;
   color: white;
-  margin-top: 0; }
+  margin-top: 0;
+  width: 120vw; }
 
 .top_bar {
   display: flex;
@@ -108,7 +112,7 @@ a:visited {
 
 .main_picture {
   color: white;
-  background-image: url("/static/server.jpg");
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/Datove_centrum_TCP.jpg/1280px-Datove_centrum_TCP.jpg");
   background-size: contain;
   display: flex;
   flex-direction: column;
@@ -129,38 +133,38 @@ a:visited {
   width: 100%; }
 
 .demo-box {
-  width: 100%;
-  max-width: 700px;
   background-color: rgba(150, 150, 150, 0.5);
-  overflow: hidden; }
+  max-width: 700px;
+  overflow: hidden;
+  width: 100%; }
 
 .demo {
+  border: 0;
   display: none;
-  overflow: hidden;
-  border: none; }
+  overflow: hidden; }
 
 .demo.active {
   display: inline; }
 
 .demo-toggle {
-  cursor: pointer;
-  border: none; }
+  border: 0;
+  cursor: pointer; }
 
 .modal-closing-trick {
   display: none; }
 
 .noscript-overlay {
+  background-color: rgba(0, 0, 0, 0.5);
   height: 100vh;
-  width: 100vw;
-  background-color: rgba(0, 0, 0, 0.5); }
+  width: 100vw; }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  right: 50%;
-  margin: auto;
+  background-color: #000;
   color: red;
-  background-color: black; }
+  margin: auto;
+  position: absolute;
+  right: 50%;
+  top: 50%; }
 
 input.modal-closing-trick:checked ~ div {
   display: none !important; }
