--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,14 +1,16 @@
-
+// Will move tehm later
+// scss-lint:disable ColorVariable
 
 @mixin z-depth-1{
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14),
               0 3px 1px -2px rgba(0,0,0,0.12),
               0 1px 5px 0 rgba(0,0,0,0.2);
 }
-@mixin z-depth-1-half{
-  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.14),
-            0 1px 7px 0 rgba(0, 0, 0, 0.12),
-            0 3px 1px -1px rgba(0, 0, 0, 0.2);
+
+@mixin z-depth-1-half {
+    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, .14),
+            0 1px 7px 0 rgba(0, 0, 0, .12),
+            0 3px 1px -1px rgba(0, 0, 0, .2);
 }
 
 /* 6dp elevation modified*/
@@ -32,30 +34,35 @@
               0 8px 10px -7px rgba(0,0,0,0.2);
 }
 
-/* 24dp elevation */
-@mixin z-depth-5{
+// 24dp elevation
+@mixin z-depth-5 {
   box-shadow: 0 24px 38px 3px rgba(0,0,0,0.14),
               0 9px 46px 8px rgba(0,0,0,0.12),
               0 11px 15px -7px rgba(0,0,0,0.2);
 }
-html{
+
+html {
     width: 100vw;
 }
 body {
+    overflow-y: hidden;
     overflow-x: hidden;
     @font-face{
         font-family: "Roboto";
         url: "https://fonts.googleapis.com/css?family=Roboto"
     }
     font-family: "Roboto", sans-serif;
-  display:flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  > *{
-    display: inline-block;
-  }
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    > *{
+        display: inline-block;
+    }
+    margin: 0;
+    margin-right: 8px;
 }
+
 .column-flex{
     display: flex;
     flex-direction: column;
@@ -71,19 +78,21 @@ main{
     flex-grow: 1;
     justify-content: flex-start;
 }
+
 hr{
     width: 100%;
 }
-a{
-    color: blue;
+a {
+    color: #0000ff;
     text-decoration: none;
     cursor: pointer;
 }
-a:hover{
+a:hover {
     text-decoration: underline;
 }
-a:visited{
-    color: purple;
+
+a:visited {
+    color: #800080;
 }
 
 
@@ -104,12 +113,13 @@ a:visited{
     }
     height: 100%;
     width: fit-content;
-    .nav_options.pinned{
+    .nav_options.pinned {
         display: block;
     }
-    .nav_menu{
+
+    .nav_menu {
         @include z-depth-5;
-        background-color: white;
+        background-color: #fff;
         display: none;
         flex-direction: column;
         flex-wrap: nowrap;
@@ -122,22 +132,25 @@ a:visited{
         text-align: center;
         top: 7%;
         width: 25%;
-        ul{
+        ul {
             text-align: center;
             padding: 0;
         }
     }
-    .nav_menu.active, .nav_menu.pinned{
+    .nav_menu.active,
+    .nav_menu.pinned {
             display: flex;
     }
 }
 
-.header{
+.header {
     background-color: #1b5e20;
     color: white;
     margin-top: 0;
+    width: 120vw;
 }
-.top_bar{
+
+.top_bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -152,14 +165,16 @@ a:visited{
         text-align: center;
     }
 }
-.portrait{
+
+.portrait {
     max-height: 20vh;
     border-radius: 50%;
 }
-.main_picture{
+
+.main_picture {
     color: white;
     // background-color: rgba(50%, 50%, 50%, 0.5);
-    background-image: url("/static/server.jpg");
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/Datove_centrum_TCP.jpg/1280px-Datove_centrum_TCP.jpg");
     background-size: contain;
     display: flex;
     flex-direction: column;
@@ -173,49 +188,59 @@ a:visited{
     width: 100%;
     height: fit-content;
 }
+
 .intro{
     max-width: 75%;
     text-align: center;
 }
+
 .projects{
     width: 100%;
 }
-.demo-box{
-    width: 100%;
+
+.demo-box {
+    background-color: rgba(150, 150, 150, .5);
     max-width: 700px;
-    background-color: rgba(150,150,150,0.5);
     overflow: hidden;
+    width: 100%;
 }
-.demo{
+
+.demo {
+    border: 0;
     display: none;
     overflow: hidden;
-    border: none;
+
 }
-.demo.active{
+
+.demo.active {
     display: inline;
 }
-.demo-toggle{
+
+.demo-toggle {
+    border: 0;
     cursor: pointer;
-    border:none;
 }
 
 //No script modal
-.modal-closing-trick{
+.modal-closing-trick {
     display: none;
 }
-.noscript-overlay{
+
+.noscript-overlay {
+    background-color: rgba(0, 0, 0, .5);
     height: 100vh;
     width: 100vw;
-    background-color: rgba(0,0,0,0.5);
 }
-.modal{
-    position: absolute;
-    top:50%;
-    right: 50%;
-    margin: auto;
+
+.modal {
+    background-color: #000;
     color: red;
-    background-color: black;
+    margin: auto;
+    position: absolute;
+    right: 50%;
+    top: 50%;
 }
+
 input.modal-closing-trick:checked ~ div {
-  display: none !important;
+    display: none !important;
 }
