--- a/css/styles.css
+++ b/css/styles.css
@@ -1,48 +1,43 @@
-/* 6dp elevation modified*/
-/* 12dp elevation modified*/
-/* 16dp elevation */
 html {
   width: 100vw; }
 
 body {
-  overflow-y: hidden;
-  overflow-x: hidden;
-  font-family: "Roboto", sans-serif;
+  align-items: center;
   display: flex;
   flex-direction: column;
+  font-family: "Roboto", sans-serif;
   justify-content: flex-start;
-  align-items: center;
   margin: 0;
-  margin-right: 8px; }
+  overflow-x: hidden; }
 @font-face {
   body {
     font-family: "Roboto";
-    url: "https://fonts.googleapis.com/css?family=Roboto"; } }
+    src: url("https://fonts.googleapis.com/css?family=Roboto"); } }
   body > * {
     display: inline-block; }
 
 .column-flex {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center; }
+  justify-content: center; }
 
 main {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 100%;
-  text-align: center;
   flex-grow: 1;
-  justify-content: flex-start; }
+  justify-content: flex-start;
+  text-align: center;
+  width: 100%; }
 
 hr {
   width: 100%; }
 
 a {
-  color: #0000ff;
-  text-decoration: none;
-  cursor: pointer; }
+  color: #00f;
+  cursor: pointer;
+  text-decoration: none; }
 
 a:hover {
   text-decoration: underline; }
@@ -58,11 +53,11 @@ a:visited {
     .nav_container .hamburger_menu img {
       height: 100%; }
   .nav_container a {
-    text-decoration: none;
-    color: black; }
+    color: #000;
+    text-decoration: none; }
     .nav_container a :visited {
-      text-decoration: none;
-      color: black; }
+      color: #000;
+      text-decoration: none; }
   .nav_container .nav_options.pinned {
     display: block; }
   .nav_container .nav_menu {
@@ -78,27 +73,29 @@ a:visited {
     padding: 0;
     position: fixed;
     text-align: center;
-    top: 7%;
+    top: 10%;
     width: 25%; }
     .nav_container .nav_menu ul {
-      text-align: center;
-      padding: 0; }
+      padding: 0;
+      text-align: center; }
   .nav_container .nav_menu.active,
   .nav_container .nav_menu.pinned {
     display: flex; }
 
 .header {
   background-color: #1b5e20;
-  color: white;
+  color: #fff;
   margin-top: 0;
   width: 120vw; }
 
 .top_bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  align-items: center;
+  display: flex;
   height: 7%;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
   width: 100%; }
   .top_bar img {
     height: 100%; }
@@ -107,23 +104,26 @@ a:visited {
     text-align: center; }
 
 .portrait {
-  max-height: 20vh;
-  border-radius: 50%; }
+  border-color: darkBlue;
+  border-radius: 50%;
+  border-style: groove;
+  border-width: medium;
+  max-height: 20vh; }
 
 .main_picture {
-  color: white;
+  align-items: center;
   background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/Datove_centrum_TCP.jpg/1280px-Datove_centrum_TCP.jpg");
   background-size: contain;
+  color: #fff;
   display: flex;
   flex-direction: column;
+  height: fit-content;
   justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: fit-content; }
+  width: 100%; }
   .main_picture a {
-    width: fit-content;
     margin: 10px;
-    text-align: center; }
+    text-align: center;
+    width: fit-content; }
 
 .intro {
   max-width: 75%;
@@ -143,7 +143,7 @@ a:visited {
   display: none;
   overflow: hidden; }
 
-.demo.active {
+.active {
   display: inline; }
 
 .demo-toggle {
@@ -160,13 +160,13 @@ a:visited {
 
 .modal {
   background-color: #000;
-  color: red;
+  color: #f00;
   margin: auto;
   position: absolute;
   right: 50%;
   top: 50%; }
 
 input.modal-closing-trick:checked ~ div {
-  display: none !important; }
+  display: none; }
 
 /*# sourceMappingURL=styles.css.map */
