--- a/css/styles.css
+++ b/css/styles.css
@@ -47,52 +47,30 @@ a:visited {
 
 .nav_container {
   height: 100%;
+  padding: 10px;
   width: fit-content; }
-  .nav_container .hamburger_menu {
-    display: block; }
-    .nav_container .hamburger_menu img {
-      height: 100%; }
   .nav_container a {
-    color: #000;
+    color: #fff;
     text-decoration: none; }
-    .nav_container a :visited {
-      color: #000;
-      text-decoration: none; }
-  .nav_container .nav_options.pinned {
-    display: block; }
-  .nav_container .nav_menu {
-    box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
-    background-color: #fff;
-    display: none;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    height: 93%;
-    justify-content: flex-start;
-    left: 0;
-    margin: 0;
-    padding: 0;
-    position: fixed;
-    text-align: center;
-    top: 10%;
-    width: 25%; }
-    .nav_container .nav_menu ul {
-      padding: 0;
-      text-align: center; }
-  .nav_container .nav_menu.active,
-  .nav_container .nav_menu.pinned {
-    display: flex; }
+  .nav_container :visited {
+    color: #fff;
+    text-decoration: none; }
+  .nav_container .active {
+    background-color: ligthen(#1b5e20, 30);
+    border-color: white;
+    border-style: groove;
+    border-width: thin; }
 
 .header {
   background-color: #1b5e20;
   color: #fff;
   margin-top: 0;
-  width: 120vw; }
+  width: 100vw; }
 
 .top_bar {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
   align-items: center;
   display: flex;
-  height: 7%;
   justify-content: space-between;
   position: sticky;
   top: 0;
@@ -114,12 +92,14 @@ a:visited {
   align-items: center;
   background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/Datove_centrum_TCP.jpg/1280px-Datove_centrum_TCP.jpg");
   background-size: contain;
+  background-repeat: repeat-x;
   color: #fff;
   display: flex;
   flex-direction: column;
   height: fit-content;
   justify-content: space-between;
-  width: 100%; }
+  width: 100%;
+  max-height: 390px; }
   .main_picture a {
     margin: 10px;
     text-align: center;
@@ -134,17 +114,49 @@ a:visited {
 
 .demo-box {
   background-color: rgba(150, 150, 150, 0.5);
+  border-width: thin;
+  border-style: groove;
+  border-color: rgba(150, 150, 150, 0.5);
   max-width: 700px;
+  min-width: 400px;
   overflow: hidden;
+  width: 47%; }
+
+.featured {
   width: 100%; }
 
 .demo {
   border: 0;
   display: none;
-  overflow: hidden; }
+  overflow: hidden;
+  width: 100%; }
 
 .active {
   display: inline; }
+
+.other-projects {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-around;
+  margin: 10px;
+  align-items: center; }
+
+.icon {
+  max-height: 50px; }
+
+.linkedin-logo {
+  max-width: 100px; }
+
+.contact-option {
+  display: flex;
+  flex-direction: column;
+  margin: 5px;
+  justify-content: center;
+  align-items: center; }
+
+.contact {
+  display: flex; }
 
 .demo-toggle {
   border: 0;
