--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -64,8 +64,6 @@ body {
         display: inline-block;
     }
 
-
-    // padding: 8px;
 }
 
 .column-flex {
@@ -106,55 +104,22 @@ a:visited {
 
 .nav_container {
     height: 100%;
+    padding: 10px;
     width: fit-content;
 
-    .hamburger_menu {
-        display: block;
-
-        img {
-            height: 100%;
-        }
-    }
 
     a {
-        color: #000;
+        color: #fff;
         text-decoration: none;
-
-        :visited {
-            color: #000;
-            text-decoration: none;
-        }
+    }:visited {
+        color: #fff;
+        text-decoration: none;
     }
-
-    .nav_options.pinned {
-        display: block;
-    }
-
-    .nav_menu {
-        @include z-depth-5;
-        background-color: #fff;
-        display: none;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        height: 93%;
-        justify-content: flex-start;
-        left: 0;
-        margin: 0;
-        padding: 0;
-        position: fixed;
-        text-align: center;
-        top: 10%;
-        width: 25%;
-
-        ul {
-            padding: 0;
-            text-align: center;
-        }
-    }
-
-    .nav_menu.active,
-    .nav_menu.pinned {
-        display: flex;
+    .active {
+        background-color:ligthen(#1b5e20,30);
+        border-color: white;
+        border-style: groove;
+        border-width: thin;
     }
 }
 
@@ -162,14 +127,13 @@ a:visited {
     background-color: #1b5e20;
     color: #fff;
     margin-top: 0;
-    width: 120vw;
+    width: 100vw;
 }
 
 .top_bar {
     @include z-depth-1;
     align-items: center;
     display: flex;
-    height: 7%;
     justify-content: space-between;
     position: sticky;
     top: 0;
@@ -197,12 +161,14 @@ a:visited {
     align-items: center;
     background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/Datove_centrum_TCP.jpg/1280px-Datove_centrum_TCP.jpg");
     background-size: contain;
+    background-repeat: repeat-x;
     color: #fff;
     display: flex;
     flex-direction: column;
     height: fit-content;
     justify-content: space-between;
     width: 100%;
+    max-height: 390px;
 
     a {
         margin: 10px;
@@ -223,8 +189,15 @@ a:visited {
 
 .demo-box {
     background-color: rgba(150, 150, 150, .5);
+    border-width: thin;
+    border-style: groove;
+    border-color: rgba(150, 150, 150, .5);
     max-width: 700px;
+    min-width: 400px;
     overflow: hidden;
+    width: 47%;
+
+}.featured {
     width: 100%;
 }
 
@@ -232,12 +205,41 @@ a:visited {
     border: 0;
     display: none;
     overflow: hidden;
-
+    width: 100%;
 
 }.active {
     display: inline;
 }
 
+.other-projects{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: space-around;
+    margin: 10px;
+    align-items: center;
+
+}
+
+.icon {
+    max-height: 50px;
+}
+
+.linkedin-logo {
+    max-width: 100px;
+}
+
+.contact-option {
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact {
+    display: flex;
+}
 // .demo
 
 .demo-toggle {
