--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ a:visited {
     text-align: center;
     width: fit-content; }
 
-.intro {
+.text-paragraph {
   max-width: 75%;
   text-align: center; }
 
