--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -196,6 +196,7 @@ a:visited {
     min-width: 400px;
     overflow: hidden;
     width: 47%;
+    margin-top: 10px;
 
 }.featured {
     width: 100%;
